add blocks